--- a/.github/workflows/main_zargarlikshop.yml
+++ b/.github/workflows/main_zargarlikshop.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
@@ -25,27 +25,28 @@ jobs:
           distribution: 'microsoft'
 
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn clean package
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: target/*.jar   # bu yerda faqat target/*.jar
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-  
+      id-token: write
+      contents: read
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: java-app
-      
+          path: ./        # jar fayl shu yerga yuklanadi
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -59,5 +60,7 @@ jobs:
         with:
           app-name: 'ZargarlikShop'
           slot-name: 'Production'
-          package: '*.jar'
+          package: '*.jar'    # endi ./ papkadan oladi
+
+
           
