--- a/.github/workflows/main_zargarlikshop.yml
+++ b/.github/workflows/main_zargarlikshop.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy JAR app to Azure Web App - ZargarlikShop
 
 on:
@@ -13,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: read # Required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
@@ -25,27 +22,27 @@ jobs:
           distribution: 'microsoft'
 
       - name: Build with Maven
-        run: mvn clean package
+        run: mvn clean package  # package osonroq va yetarli
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: java-app
-          path: target/*.jar   # bu yerda faqat target/*.jar
+          path: target/*.jar  # ${GITHUB_WORKSPACE} olib tashlandi
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write
-      contents: read
+      id-token: write # Required for requesting JWT
+      contents: read # Required for actions/checkout
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: java-app
-          path: ./        # jar fayl shu yerga yuklanadi
+          path: ./   # artifact shu papkaga yuklanadi
 
       - name: Login to Azure
         uses: azure/login@v2
@@ -60,7 +57,4 @@ jobs:
         with:
           app-name: 'ZargarlikShop'
           slot-name: 'Production'
-          package: '*.jar'    # endi ./ papkadan oladi
-
-
-          
+          package: '*.jar'  # endi ./ papkadan oladi
